<resources>
    <string name="app_name">FitByKit</string>
    <string name="app_des">Coaching you to a healthier and more active life</string>
    <string name="app_des1">👣 Steps Counter</string>
    <string name="app_des2">📺 Expert Guided Videos For Workouts</string>
    <string name="app_des3">🍎 Generate Best Diet As Per Your Health</string>
    <string name="about_user">About You</string>
    <string name="about_user_des">This information lets Fit estimate calories, distance, and the intensity of your activity. You also get coaching that tailored to you.</string>
    <string name="get_start">Getting Started</string>
    <string name="continue_">Continue</string>
    <string name="get_in_bed">Get In Bed</string>
    <string name="wake_up">Wake Up</string>
    <string name="set_steps">Steps</string>
    <string name="set_hp">Heart Points</string>
    <string name="act_goals">Activity goals</string>
    <string name="no_thanks">No thanks</string>
    <string name="turn_on">Turn On</string>
    <string name="gender">Gender</string>
    <string name="user_name">Name</string>
    <string name="user_weight">Weight</string>
    <string name="user_height">Height</string>
    <string name="track">Track Your activities</string>
    <string name="track_des1">Fit can track walking, running and cycling in the background. This means you get metrics like steps, distance, and calories for all these activities.</string>
    <string name="track_des2">To do this, the app needs permission to recognize your activity. Over time, Fit also uses this data to personalize your experience, and better recognize activity.</string>
    <string name="track_des3">If you choose to turn this setting off, you can still manually track workouts with Fit.</string>
    <string name="home_">Home</string>
    <string name="workout_">Workouts</string>
    <string name="diet_">Diet</string>
    <string name="profile_">Goals &amp; Sleep Cycle</string>
    <string name="b_s">Bedtime schedule</string>
    <string name="allow">Allow Fit to access your physical activity?</string>
    <string name="btn_allow">Allow</string>
    <string name="btn_not_allow">Don\'t Allow</string>
    <string name="set_goals">Set goal</string>
    <string name="step_details">Keep moving each day to meet your steps goal and avoid sedentary time</string>
    <string name="steps_day">steps a day</string>
    <string name="def_steps">4500</string>
    <string name="hp">Heart Points</string>
    <string name="hp_des">You score Heart Points for doing activities at a higher pace, like taking a brisk walk. Increases the intensity to earn more points.</string>
    <string name="def_hp">50</string>
    <string name="hp_a_day">points a day</string>
    <string name="steps_text">Wait…</string>
    <string name="hp_text">25</string>
    <string name="calorie">944</string>
    <string name="calorie_text">Calories burned</string>
    <string name="Km">2</string>
    <string name="Km_text">Km Covered</string>
    <string name="walking_min">20</string>
    <string name="walking_min_text">Walking min</string>
    <string name="notificationTitle">Get notifications from Fit</string>
    <string name="notificationDes">Allow Fit to send notifications to get coaching messages and tips to help you meet your goals</string>
    <string name="notificationButton">Turn on notifications</string>
    <string name="bmi_title">Your Body Mass Index</string>
    <string name="bmi_des">BMI is a simple calculation used to assess whether a person has a healthy body weight for their height</string>
    <string name="bmi_btn">User BMI</string>
    <string name="sync_title">Sync Fit with Health Connect</string>
    <string name="sync_des">Share stats between Fit and your other apps, like your calories, heart rate, and body measurements</string>
    <string name="energy_title">Energy expanded</string>
    <string name="energy_duration">Last 7 days</string>
    <string name="calorie_spent">cal</string>
    <string name="today">Today</string>
    <string name="daily_goals">Your daily goals</string>
    <string name="achieved">0/7\nAchieved</string>
    <string name="weekly_goal">Your weekly target</string>
    <string name="weekly_achieved">0 of 150</string>
    <string name="weekly_goal_des">Scoring 150 Heart Points a week \ncan help you live longer, sleep \nbetter, and boost your mood</string>
    <string name="sync_des1">
        To help you stay on top of all your goals, Fit can now sync with Health Connect to share data with the other apps you use.\n \n
        This means you can add data to Fit from your other apps and devices, and share your Fit data with them.
    </string>
    <string name="sync_des2">
        How it works \n \n
        When you set up Health Connect, you can choose which data you want Fit to read or write. \n \n
        When you allow Fit to read data type from Health Connect, it\'s stored in your Google Account with your other Fit data. Fit uses this data to provide features like tracking your fitness and health, and giving related recommendations and insights.\n \n
        How Fit uses data also depends on the features you use. For example, Fit may show distance data from Health Connect in workout summaries, or show heart rate data in your sleep sessions. \n \n
        Fit also uses this data to personalize or improve products and services. Usage data is collected for troubleshooting and product improvement purposes. \n \n
        Data you choose to write to Health Connect is stored on your device, and other apps that you choose to sync with Health Connect will be able to access this data. \n
    </string>
    <string name="sync_des3">
        Managing your data \n \n
        You can delete data stored in Health Connect, by going to your Fit settings to Health Connect to Manage data and access. \n \n
        You can change the data Fit shares with Health Connect, or turn this feature off, from your Fit app settings. Turning off this feature won\'t delete any data. \n
    </string>
    <string name="turn_On">Turn on</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="muscle_name">Muscle Name</string>
    <string name="muscle_type">Front Muscle</string>
    <string name="exercise">Exercise</string>
    <string name="home_meal">Home</string>
    <string name="meal_video">Video</string>
    <string name="buy_meal">Buy Meal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like_button">Like Button</string>
    <string name="amazon">Amazon</string>
    <string name="store_icon">Store Icon</string>
    <string name="ingredients_amp_measures"><![CDATA[Ingredients & Measures]]></string>
    <string name="meal_ingredient">Meal Ingredient</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="liked_workouts">Liked Workouts</string>
    <string name="empty_list">Empty list</string>
    <string name="tap_to_add_workouts">Tap to add workouts</string>
    <string name="activity">Activity</string>
    <string name="macros_will_appear_here">Macros will appear here.</string>
    <string name="search_meals">Search Meals</string>
    <string name="enter_pip_mode">Enter PIP</string>
    <string name="download_video">Download</string>
    <string name="create">Create</string>
    <string name="workout_playlist">Workouts</string>
    <string name="create_day_wise_schedule_for_workouts">create day-wise schedule for workouts</string>
    <string name="day_name">Day Name</string>
    <string name="select_day">Select Day</string>
    <string name="workout">Workout</string>
    <string name="cardio">Cardio</string>
    <string name="hilt">HILT</string>
    <string name="yoga">Yoga</string>
    <string name="options">Options</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="share_analytics_data">Share analytics data</string>
    <string name="cancelFab">cancelFAB</string>
    <string name="categories">Categories</string>
    <string name="exercise_day_name">Exercise Day Name</string>
    <string name="day">Day</string>
    <string name="category">Category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="custom_workouts_playlist_will_appear_here_tap_create_playlist_to_do_so">Custom Workouts Playlist will appear here. Tap \'+ Create Playlist\' to do so.</string>
    <string name="muscle_name_">Muscle Name - </string>
    <string name="day_name_">Day Name -</string>
    <string name="category_">Category -</string>
    <string name="save_playlist">Save Playlist</string>
    <string name="day_of_the_week">Day of the Week</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>
    <string name="urgent">Urgent</string>
    <string name="feedback">Feedback</string>
    <string name="enable_analytics">Enable Analytics</string>
    <string name="tap_on_map_to_set_start_point">Tap on map to set start point</string>
    <string name="distance_0_0_km">Distance: 0.0 km</string>
    <string name="duration_00_00_00">Duration: 00:00:00</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="share">SHARE</string>
    <string name="save">SAVE</string>
    <string name="reset_steps">Reset Steps</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_category">Meal Category</string>
    <string name="enter_start_address">Enter start address</string>
    <string name="search">Search</string>
    <string name="enter_destination_address">Enter destination address</string>
    <string name="my_location">My Location</string>
    <string name="reset">Reset</string>
    <string name="find_route">Find Route</string>
    <string name="today_s_progress">Today\'s Progress</string>
    <string name="_3_of_5_goals_completed">3 of 5 goals completed</string>
    <string name="steps_goal">Steps Goal</string>
    <string name="_7_500_10_000">7,500 / 10,000</string>
    <string name="update">Update</string>
    <string name="_120">120</string>
    <string name="goal_minutes">Goal (minutes)</string>
    <string name="_75_120">75 / 120</string>
    <string name="walking_minutes_goal">Walking Minutes Goal</string>
    <string name="distance_goal_km">Distance Goal (km)</string>
    <string name="_8_0">8.0</string>
    <string name="goal_km">Goal (km)</string>
    <string name="_5_7_8_0">5.7 / 8.0</string>
    <string name="_500">500</string>
    <string name="goal">Goal</string>
    <string name="_300_500">300 / 500</string>
    <string name="_10000">10000</string>
    <string name="heart_points_goal">Heart Points Goal</string>
    <string name="_38_100">38 / 100</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="calculate_your_body_mass_index">Calculate your Body Mass Index</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="your_bmi_result">Your BMI Result</string>
    <string name="_25_4">25.4</string>
    <string name="normal_weight">Normal Weight</string>
    <string name="your_bmi_is_in_the_normal_range_keep_up_the_good_work">Your BMI is in the normal range. Keep up the good work!</string>
    <string name="bmi_categories">BMI Categories</string>
    <string name="underweight_bmi_lt_18_5"><![CDATA[• Underweight: BMI < 18.5]]></string>
    <string name="normal_weight_bmi_18_5_24_9">• Normal weight: BMI 18.5–24.9</string>
    <string name="overweight_bmi_25_0_29_9">• Overweight: BMI 25.0–29.9</string>
    <string name="obese_bmi_30_0">• Obese: BMI ≥ 30.0</string>
    <string name="save_to_profile">Save to Profile</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
</resources>